Getting rid of LinkedList